--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,36 @@ services:
     depends_on:
       - db
   db:
-    container_name: db_postgres
-    hostname: postgres_knex
-    image: postgres:14.2
+    image: postgres:12.4-alpine
+    container_name: postgres
     environment:
       POSTGRES_USER: volnei
       POSTGRES_PASSWORD: 12345
       POSTGRES_DB: db_user
-    ports: 
-      - 5432:5432
-    volumes: 
+    ports:
+      - "5432:5432"
+    volumes:
       - db-data:/var/lib/postgresql/data
-volumes: 
+    networks:
+      - network
+
+  pgadmin-compose:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "volnei@gmail.com"
+      PGADMIN_DEFAULT_PASSWORD: "volnei123456"
+    ports:
+      - "15432:80"
+    depends_on:
+      - db
+    networks:
+      - network
+
+networks:
+  network:
+    driver: bridge
+
+volumes:
   db-data:
+    external: true
