--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "joi": "^17.6.0",
     "knex": "^1.0.4",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
