--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "test-fullstackjsjunior",
-  "version": "1.0.0",
-  "description": "Projeto de Teste para vaga Junior na empresa Contele",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
-  },
-  "author": "Volnei Alves Ferreira",
-  "license": "ISC",
-  "devDependencies": {
-    "jest": "^27.5.1",
-    "nodemon": "^2.0.15",
-    "supertest": "^6.2.2"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "joi": "^17.6.0",
-    "knex": "^1.0.4",
-    "morgan": "^1.10.0",
-    "pg": "^8.7.3",
-    "swagger-ui-express": "^4.3.0",
-    "uuid": "^8.3.2"
-  }
+    "name": "test-fullstackjsjunior",
+    "version": "1.0.0",
+    "description": "Projeto de Teste para vaga Junior na empresa Contele",
+    "main": "server.js",
+    "scripts": {
+        "start": "NODE_ENV=tiny node server.js",
+        "dev": "NODE_ENV=dev nodemon server.js",
+        "test": "jest"
+    },
+    "author": "Volnei Alves Ferreira",
+    "license": "ISC",
+    "devDependencies": {
+        "jest": "^27.5.1",
+        "nodemon": "^2.0.15",
+        "supertest": "^6.2.2"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "joi": "^17.6.0",
+        "knex": "^1.0.4",
+        "morgan": "^1.10.0",
+        "pg": "^8.7.3",
+        "swagger-ui-express": "^4.3.0",
+        "uuid": "^8.3.2"
+    }
 }
