--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
     "main": "server.js",
     "scripts": {
         "start": "NODE_ENV=tiny node server.js",
-        "dev": "NODE_ENV=dev nodemon server.js",
-        "test": "jest"
+        "dev": "NODE_ENV=dev nodemon server.js"
     },
     "author": "Volnei Alves Ferreira",
     "license": "ISC",
     "devDependencies": {
-        "jest": "^27.5.1",
-        "nodemon": "^2.0.15",
-        "supertest": "^6.2.2"
+        "nodemon": "^2.0.15"
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
